# mongodb-sink-consumer-rs

./: Cargo.toml  Dockerfile  README.md
src/: error.rs  exporter.rs  kafka.rs  main.rs  mongo.rs
