[package]
name = "mongodb-sink-consumer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "env", "derive"] }
env_logger = "0.10"
log = "0.4"
rdkafka = { version = "0.29", features = ["cmake-build", "gssapi"] }
tokio = { version = "1", features = ["full"] }
schema_registry_converter = { version = "3.1.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
mongodb = "2"
bson = "2"
metrics = "0.18"
metrics-exporter-prometheus = "0.9"
axum = "0.6"
metrics-util = "0.12"
hyper = { version = "0.14", features = ["full"] }
